# vorago-shared-hal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: def-config.toml
.github/workflows/: ci.yml
src/: clock.rs  embassy.rs  lib.rs  pins.rs  pwm.rs  sysconfig.rs
src/gpio/: asynch.rs  ll.rs  mod.rs  regs.rs
src/i2c/: mod.rs  regs.rs
src/ioconfig/: mod.rs  regs.rs
src/spi/: mod.rs  pins_vor1x.rs  pins_vor4x.rs  regs.rs
src/timer/: mod.rs  pins_vor1x.rs  pins_vor4x.rs  regs.rs
src/uart/: mod.rs  pins_vor1x.rs  pins_vor4x.rs  regs.rs  rx_asynch.rs  tx_asynch.rs
